some updates to thesis structure, very rough draft of chapter 3 done

--- a/templates/cover.tex
+++ b/templates/cover.tex
@@ -48,7 +48,7 @@
 % however the specifications can change. We recommend that you verify the
 % layout of your title page with your thesis advisor and/or the MIT 
 % Libraries before printing your final copy.
-\title{Managing Risk in Geothermal Exploration and Production for Commercial Energy Diversification}
+\title{Machine Learning and Cost Analysis for Risk Management in Geothermal Exploration and Production}
 
 \author{Robert Chadwick Holmes}
 % If you wish to list your previous degrees on the cover page, use the 
@@ -131,13 +131,15 @@
 
 The past year will be long remembered for the impact a global pandemic had on society at large. This thesis is a product of that time. Those mentioned below played a significant role in keeping things on track in spite of the many months of mask wearing; hand sanitizing; regular virus testing; quarantining; remote classes, meetings, and connection-building; and eventual vaccination. Some I have even met in person, although not all. That is all part of the legacy of this most unusual and memorable year.
 
-[SDM]
+[Advisor]
 
-[ERL]
+[SDM - Readers, important individuals]
 
-[Chevron]
+[ERL - NST Group]
 
-[Chevron cohort - both years]
+[Chevron - Company]
+
+[Chevron cohorts]
 
 [Family]
 
