--- a/templates/main.tex
+++ b/templates/main.tex
@@ -143,7 +143,13 @@
 \include{chap1}
 \include{chap2}
 \include{chap3}
-\appendix
+%\include{chap4}
+\include{chap5}
+%\include{chap6}
+%\include{chap7}
+%\include{chap8}
+%\include{chap9}
+%\appendix
 %\include{appa}
 %\include{appb}
 \include{biblio}
