--- a/templates/acronyms.tex
+++ b/templates/acronyms.tex
@@ -27,6 +27,8 @@
 \newacronym{ma}{Ma}{Million Years Ago}
 \newacronym{mdvf}{MDVF}{Mogollon-Datil Volcanic Field}
 \newacronym{mwh}{MWh}{Megawatt-Hour}
+\newacronym{nan}{NaN}{Not a Number}
+\newacronym{ngds}{NGDS}{National Geothermal Data System}
 \newacronym{nmfk}{NMFk}{Non-negative Matrix Factorization \& $k$-means Clustering}
 \newacronym{nm}{NM}{New Mexico}
 \newacronym{nrel}{NREL}{National Renewable Energy Laboratory}
@@ -35,3 +37,4 @@
 \newacronym{pfa}{PFA}{Play Fairway Analysis}
 \newacronym{rgr}{RGR}{Rio Grande Rift}
 \newacronym{usgs}{USGS}{United States Geological Survey}
+\newacronym{voi}{VOI}{Value of Information}
