--- a/templates/chap2.tex
+++ b/templates/chap2.tex
@@ -96,7 +96,7 @@ Geologic survey         & surface fault traces, fault recency                   
 Gravity survey          & subsurface faults, plutons, salt                         \\
 Resistivity survey      & fractured zones                                          \\
 Satellite survey        & topography, structural patterns                          \\
-Seismic surveys         & subsurface faults, folds, other structural features      \\
+Seismic survey          & subsurface faults, folds, other structural features      \\
                         &                                                          \\
 \textbf{Stratigraphic}  &                                                          \\ \hline
 Geologic survey         & stratigraphic chart, seal and reservoir                  \\
@@ -125,6 +125,7 @@ Gravity survey          & presence of high-T anomalies (e.g. magma)             
 Hydrologic survey       & geothermometry, dominant geofluid liquid phase           \\
 Radiometric survey      & radioactive heat generation                              \\
 Resistivity survey      & thermal conductivity, temperature gradient               \\
+Seismic survey          & depth to mantle, intrusive igneous features              \\
 Temperature survey      & heat flow, geothermal gradient                          
 \end{tabular}
 \caption[Data collection methods for geothermal derisking]{Data collection methods useful for characterizing and derisking Earth subsystems that influence geothermal favorability}
@@ -215,7 +216,7 @@ The area of interest (AOI) for the geothermal exploration section of this thesis
 
 \subsubsection{Basin and Range}
 
-Plate tectonic activity along the western edge of the United States transitioned ~30 \acrshort{ma} from subduction of the ancient Farallon plate to the present-day arrangement of transform motion along the San Andreas Fault and the Juan de Fuca subduction zone off of the Pacific Northwest \citep[~p. 81]{fowler_solid_2005}. This transition created a broad extensional regime within the southwestern section of the United States and into Mexico, believed to be responsible for the alternating narrow fault-bounded mountain and valley signature of the \acrlong{br} (\acrshort{br}) \citep{henry_real_1992}. The successive north-south striking normal faults level out in dip with depth, creating a asymmetric graben structures \citep[~p. 28-29]{frisch_continental_2011}. Cumulative extension reduced the crust thickness to 30-35 km on average, with associated enhanced volcanism, geothermal gradient, and average heat flow throughout the BR province \citep{lerch_crustal_2007}. (\textbf{FIGURE})
+Plate tectonic activity along the western edge of the United States transitioned \texttt{\char`\~}30 \acrshort{ma} from subduction of the ancient Farallon plate to the present-day arrangement of transform motion along the San Andreas Fault and the Juan de Fuca subduction zone off of the Pacific Northwest \citep[~p. 81]{fowler_solid_2005}. This transition created a broad extensional regime within the southwestern section of the United States and into Mexico, believed to be responsible for the alternating narrow fault-bounded mountain and valley signature of the \acrlong{br} (\acrshort{br}) \citep{henry_real_1992}. The successive north-south striking normal faults level out in dip with depth, creating a asymmetric graben structures \citep[~p. 28-29]{frisch_continental_2011}. Cumulative extension reduced the crust thickness to 30-35 km on average, with associated enhanced volcanism, geothermal gradient, and average heat flow throughout the BR province \citep{lerch_crustal_2007}. (\textbf{FIGURE})
 
 \subsubsection{Rio Grande Rift}
 
