--- a/templates/chap5.tex
+++ b/templates/chap5.tex
@@ -6,7 +6,7 @@
 
 \subsubsection{Logistic Regression}
 
-\subsubsection{Decision Trees}
+\subsubsection{Decision Trees}\label{ch5:decision_trees}
 
 \subsubsection{Tree Ensembles}
 
