Edits to Chapter 2 done

--- a/templates/acronyms.tex
+++ b/templates/acronyms.tex
@@ -28,6 +28,8 @@
 \newacronym{mdvf}{MDVF}{Mogollon-Datil Volcanic Field}
 \newacronym{mwh}{MWh}{Megawatt-Hour}
 \newacronym{nan}{NaN}{Not a Number}
+\newacronym{nfegs}{NF-EGS}{Near Field EGS}
+\newacronym{nrel}{NREL}{National Renewable Energy Laboratory}
 \newacronym{ngds}{NGDS}{National Geothermal Data System}
 \newacronym{nmfk}{NMFk}{Non-negative Matrix Factorization \& $k$-means Clustering}
 \newacronym{nm}{NM}{New Mexico}
