--- a/templates/zotero.bib
+++ b/templates/zotero.bib
@@ -1,4 +1,13 @@
 
+@misc{scikit-learn_common_2021,
+	title = {Common pitfalls and recommended practices},
+	url = {https://scikit-learn.org/stable/common_pitfalls.html},
+	urldate = {2021-06-21},
+	journal = {10.2. Data leakage — scikit-learn 0.24.2 documentation},
+	author = {{scikit-learn}},
+	year = {2021},
+}
+
 @article{kaufman_leakage_2012,
 	title = {Leakage in data mining: {Formulation}, detection, and avoidance},
 	volume = {6},
